feat: Added @BeforeEach to the test class